# Fast_SM4

./: .gitignore  CMakeLists.txt  remark.txt
include/: mode_gcm.h  sm4_bs256.h  test.h  utils.h
src/: mode_gcm.c  sm4_bs256.c  utils.c
test/: main.c  test.c
